<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicMathOps"
    android:background="@color/grey">


    <TextView
        android:id="@+id/tv_first_number"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:background="@color/first_number_bg"
        android:gravity="center"
        android:text="@string/first_number_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <EditText
        android:id="@+id/et_first_number_text"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/hint_first_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_first_number"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_second_number"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:background="@color/second_number_bg"
        android:gravity="center"
        android:text="@string/second_number_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_number_text"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_second_number_text"
        android:layout_width="219dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/hint_second_number"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_second_number"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="195dp"
        android:layout_height="49dp"
        android:background="@color/result_bg"
        android:gravity="center"
        android:text="@string/result_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_second_number_text"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/substract_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:background="@color/basic_math_ops_bg"
        android:onClick="substract"
        android:text="@string/substract_text"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/division_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/division_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="216dp"
        android:background="@color/basic_math_ops_bg"
        android:onClick="division"
        android:text="@string/division_text"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/product_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:background="@color/basic_math_ops_bg"
        android:onClick="product"
        android:text="@string/product_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/division_btn"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sum_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/basic_math_ops_bg"
        android:onClick="sum"
        android:text="@string/sum_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/product_btn"
        app:layout_constraintEnd_toStartOf="@+id/substract_btn"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/button4"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@color/clear_input_bg"
        android:text="@string/clear_input_text"
        android:textSize="20sp"
        android:onClick="clearInputs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result"
        app:layout_constraintVertical_bias="0.847" />


</androidx.constraintlayout.widget.ConstraintLayout>